Tue Oct 28 20:15:49 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (make_readconv): now can specify the size of cbuf.

	* io.c (read_all, appendline, io_getc, rb_io_ungetc): follow above
	  change.

Tue Oct 28 19:00:51 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_pipe_exec): internal fds should be always
	  binmode.

Tue Oct 28 17:21:18 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/make-snapshot.rb: merged from ruby_1_9_1.

Tue Oct 28 16:56:31 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* gem_prelude.rb: merged from ruby_1_9_1 branch.
	  considers --program-suffix and prefix configure options.

	* lib/rubygems/defaults.rb: ditto.

	* test/rubygems/test_gem.rb (@default_dir_re): ditto.

Tue Oct 28 16:13:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot: use String#bytesize.

Tue Oct 28 09:51:48 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bootstraptest/test_thread.rb: ignore some exceptions.
	  [ruby-dev:36951]

Tue Oct 28 09:19:40 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RUNRUBY): now ruby requires something from
	  gem_prelude, so need to set library path.

Mon Oct 27 22:29:11 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* vm_insnhelper.c (vm_yield_setup_args): supports optional parameters.
	  Fixed [ruby-core:19503].

	* vm_insnhelper.c (vm_yield_setup_block_args): a new function. extracted
	  from vm_yield_setup_args.

	* vm_insnhelper.c (vm_yield_setup_block_args_complex): ditto.

	* test/ruby/test_proc.rb: added tests for arguments on a Proc from
	  Kernel#proc called.

Mon Oct 27 20:03:05 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/mathn/complex/complex.c: no need to define rb_cComplex because
	  it's already defined at $(srcdir)/complex.c.

	* ext/mathn/rational/rational.c: no need to define rb_cRational because
	  it's already defined at $(srcdir)/rational.c.

Mon Oct 27 15:58:25 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
