@@ -1,3 +1,12 @@
+Tue Oct 28 20:59:12 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* io.c (extract_binmode): new function to extract binmode/textmode
+	  options from hash.
+
+	* io.c (rb_io_extract_modeenc): use above function.
+
+	* io.c (rb_io_s_pipe): recognize binmode/textmode options.
+
 Tue Oct 28 20:15:49 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* io.c (make_readconv): now can specify the size of cbuf.
